--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,2 +1,2 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Inter:wght@100..900&display=swap');
 @import './base.css';
